remove 'made by'

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </table>
     <footer class="container footer">
       <div class="d-flex">
-        <p class="text-center made-by">Made by <a target="_blank" href="http://karthikraju.netlify.app">Karthik Raju<a><p>
+        <!-- <p class="text-center made-by">Made by <a target="_blank" href="http://karthikraju.netlify.app">Karthik Raju<a><p> -->
         <div class="social-links">
           <a target="_blank" href="http://twitter.com/karthikraju391">Twitter</a>
           <a target="_blank" href="http://github.com/KarthikRaju391">Github</a>
